Some more restructuring.

--- a/02gy_cpp/02gy_cpp.tex
+++ b/02gy_cpp/02gy_cpp.tex
@@ -62,10 +62,6 @@
 	\end{center}
 	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Porkoláb} Zoltán és \textsc{Horváth} Gábor gyakorlata alapján. (\today)
 	
-	%TODO függvény és operátor túlterhelés ide illene a legjobban
-	%TODO globális és statikus függvényeket is ide kéne beilleszteni
-	
-	
 	\section{Láthatóság, élettartam}
 	Egy objektum \textbf{láthatóságának} nevezzük a kódnak azon szakaszait, melyeknél lehet rá hivatkozni.
 	\smallskip
@@ -156,7 +152,7 @@ int main()
 	\smallskip
 	
 	A stack egy FILO (\textit{first in last out}) adatszerkezet -- azaz azt az elemet ,,dobja'' ki a vezérlés a stack-ből, melyet utoljára rakott be.
-	\section{Mutatók és referenciák}
+	\section{Mutatók}
 	A mutatók olyan nyelvi elemek, melyek egy adott típusú memóriaterületre mutatnak. Segítségükkel anélkül is tudunk hivatkozni egy adott objektumra (és nem csak a másolatára), hogy közvetlenül az objektummal dolgoznánk.
 	\begin{lstlisting}
 int main()
