--- a/08gy_cpp/08gy_cpp.tex
+++ b/08gy_cpp/08gy_cpp.tex
@@ -1,4 +1,4 @@
-﻿\documentclass[a4paper,11.5pt,table]{article}
+\documentclass[a4paper,11.5pt,table]{article}
 \usepackage[textwidth=170mm, textheight=230mm, inner=20mm, top=20mm, bottom=30mm]{geometry}
 \usepackage[normalem]{ulem}
 \usepackage[utf8]{inputenc}
@@ -420,7 +420,7 @@ void f()
 		A dependent scope problémája nem csupán az osztályon belüli osztályokra érvényes. Nemsokára meglátjuk, hogy a \texttt{typedef} kulcsszó is ide tud vezetni.
 	\end{note}
 	Így viszont felmerülhet a kérdés hogy van-e szükség \texttt{typename} kulcsszóra, ha egy \texttt{std::vector<int>::iterator} típusú objektumot akarunk létrehozni (\texttt{std::vector<int>::iterator vit;}). A válasz az hogy nem, hisz ha konkrétan megadjuk a típust, amellyel példányosítanánk, akkor a fordító arra a konkrét típusra vissza tudja keresni, hogy \texttt{std::vector<int>::iterator} típus-e, vagy sem.
-	\section{Nem template osztály átírása template osztályra}
+	\subsection{Nem template osztály átírása template osztályra}
 	Már csak az a probléma, hogy \texttt{List} csak \texttt{int}-eket képes tárolni. Csináljunk belőle egy template osztályt! Feladatunk csupán annyi, hogy az osztály elé írjunk egy \texttt{template <typename T>}-t, és minden \texttt{List}-et \texttt{List<T>}-re, valamint minden \texttt{int}-et \texttt{T}-re cseréljünk. Ehhez nyilván az iterátorainkat is módosítani kell majd.
 	
 	\medskip
